# inference-pipeline

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarks/: README.md  chaos_results.md  generate_charts.py  gpu_utilization.json  run_demo.py  sota_comparison.md  speculative_acceptance.json  throughput_scaling.json  ttft_distribution.json
docker/: Dockerfile.serving
examples/: quickstart.py
k8s/: deployment.yaml  gpu-scheduler-config.yaml
proto/: inference.proto
src/inference_pipeline/: __init__.py  autoscaler.py  batcher.py  chaos.py  fp8_quant.py  health.py  kv_cache.py  metrics.py  moe_router.py  paged_attention.py  prefix_cache.py  router.py  scheduler.py  serving.py  speculative.py  tensor_parallel.py
tests/: test_scheduler.py
